WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238931
[web-animations] REGRESSION (
r287881
): loading performance for diply.com regressed
https://bugs.webkit.org/show_bug.cgi?id=238931
Summary
[web-animations] REGRESSION (r287881): loading performance for diply.com regr...
Antoine Quint
Reported
2022-04-07 06:42:23 PDT
[web-animations] REGRESSION (
r287881
): loading performance for diply.com regressed
Attachments
Patch
(2.86 KB, patch)
2022-04-07 06:43 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.86 KB, patch)
2022-04-07 10:54 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-04-07 06:43:47 PDT
Created
attachment 456918
[details]
Patch
Antoine Quint
Comment 2
2022-04-07 06:43:53 PDT
<
rdar://problem/91190007
>
Simon Fraser (smfr)
Comment 3
2022-04-07 09:42:16 PDT
Comment on
attachment 456918
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=456918&action=review
> Source/WebCore/style/Styleable.cpp:451 > + auto effectTargetsProperty = [&](KeyframeEffect& effect) { > + if (effect.animatedProperties().contains(property)) > + return true; > + if (auto* transition = dynamicDowncast<CSSTransition>(effect.animation())) > + return transition->property() == property; > + return false; > + };
Might be cleaner to pass `property` in and remove default capture.
Antoine Quint
Comment 4
2022-04-07 10:45:45 PDT
(In reply to Simon Fraser (smfr) from
comment #3
)
> Comment on
attachment 456918
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=456918&action=review
> > > Source/WebCore/style/Styleable.cpp:451 > > + auto effectTargetsProperty = [&](KeyframeEffect& effect) { > > + if (effect.animatedProperties().contains(property)) > > + return true; > > + if (auto* transition = dynamicDowncast<CSSTransition>(effect.animation())) > > + return transition->property() == property; > > + return false; > > + }; > > Might be cleaner to pass `property` in and remove default capture.
Had the same thought as I was writing but was too lazy! Will fix in the commit.
Antoine Quint
Comment 5
2022-04-07 10:54:43 PDT
Created
attachment 456943
[details]
Patch for landing
EWS
Comment 6
2022-04-07 13:33:43 PDT
Committed
r292561
(
249399@main
): <
https://commits.webkit.org/249399@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456943
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug