[web-animations] REGRESSION (r287881): loading performance for diply.com regressed https://bugs.webkit.org/show_bug.cgi?id=238931 rdar://91190007

Reviewed by Simon Fraser.

We only need to resolve effects in the stack if they are targeting the property we are
considering for the creation, update or removal of a CSS Transition.

* style/Styleable.cpp:
(WebCore::updateCSSTransitionsForStyleableAndProperty):

Canonical link: https://commits.webkit.org/249399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292561 268f45cc-cd09-0410-ab3c-d52691b4dbfc